crates/serde-feather/tests/ui/generic_struct.stderr
error[E0277]: the trait bound `NotDeserialize: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/generic_struct.rs:11:36
   |
11 |     let _ = serde_json::from_str::<GenericModel<NotDeserialize>>("{\"value\":1}");
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Deserialize<'_>` is not implemented for `NotDeserialize`
  --> tests/ui/generic_struct.rs:3:1
   |
 3 | struct NotDeserialize;
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `NotDeserialize` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             `&'a Path` implements `Deserialize<'de>`
             `&'a [u8]` implements `Deserialize<'de>`
             `&'a str` implements `Deserialize<'de>`
             `()` implements `Deserialize<'de>`
             `(T,)` implements `Deserialize<'de>`
             `(T0, T1)` implements `Deserialize<'de>`
             `(T0, T1, T2)` implements `Deserialize<'de>`
             `(T0, T1, T2, T3)` implements `Deserialize<'de>`
           and $N others
note: required for `GenericModel<NotDeserialize>` to implement `Deserialize<'_>`
  --> tests/ui/generic_struct.rs:5:10
   |
 5 | #[derive(FeatherDeserialize)]
   |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
 6 | struct GenericModel<T> {
   |        ^^^^^^^^^^^^^^^
note: required by a bound in `serde_json::from_str`
  --> $CARGO/serde_json-$VERSION/src/de.rs
   |
   | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
   |        -------- required by a bound in this function
   | where
   |     T: de::Deserialize<'a>,
   |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
   = note: this error originates in the derive macro `FeatherDeserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
